snapshots/syntax/library/functions/environment/error/error_file_logging.snap
---
source: src/syntax/library/functions/environment/error.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PrintStatement
      children:
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: Octothorpe
          text: "#"
        - kind: Identifier
          text: fileNum
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Error \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Err
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Number
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\": \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: ErrorKeyword
          text: Error
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: Err
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Number
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
